@@ -142,13 +142,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-   *) mod_speling: Backport CheckBasenameMatch for PR44221
-      trunk patch: http://svn.apache.org/r1557580
-                   http://svn.apache.org/r1732273
-                   http://svn.apache.org/r1844598
-      2.4.x patch: full resync of code/docs due to conflicts + changes
-                   http://people.apache.org/~covener/patches/speling-sync.diff
-      +1 covener, rpluem, ylavic
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
