@@ -44,21 +44,23 @@ misspellings.</description>
     <strong>up to one misspelling</strong> (character insertion /
     omission / transposition or wrong character). A list is built
     with all document names which were matched using this
-    strategy.</p>
+    strategy. <strong>Erroneous extension</strong> can also be fixed
+    by this module.</p>
 
     <p>If, after scanning the directory,</p>
 
     <ul>
       <li>no matching document was found, Apache will proceed as
-      usual and return a "document not found" error.</li>
+      usual and return an error (<code>404 - document not found</code>).</li>
 
       <li>only one document is found that "almost" matches the
       request, then it is returned in the form of a redirection
-      response.</li>
+      response (<code>301 - Moved Permanently</code>).</li>
 
       <li>more than one document with a close match was found, then
       the list of the matches is returned to the client, and the
-      client can select the correct candidate.</li>
+      client can select the correct candidate (<code>300 - Multiple
+      Choices</code>).</li>
     </ul>
 
 </summary>
@@ -97,13 +99,13 @@ module</description>
       directory names.</li>
 
       <li>spelling corrections apply strictly to existing files, so
-      a request for the <code>&lt;Location "/status"&gt;</code> may
+      a request for the <code>&lt;Location /status&gt;</code> may
       get incorrectly treated as the negotiated file
       "<code>/stats.html</code>".</li>
     </ul>
 
     <!-- XXX: is that really true?! -nd -->
-    <p>mod_speling should not be enabled in <a href="mod_dav.html">DAV</a>
+    <p><module>mod_speling</module> should not be enabled in <a href="mod_dav.html">DAV</a>
     enabled directories, because it will try to "spell fix" newly created
     resource names against existing filenames, e.g., when trying to upload
     a new document <code>doc43.html</code> it might redirect to an existing
@@ -126,9 +128,31 @@ module</description>
 <override>Options</override>
 
 <usage>
-    <p>When set, this directive limits the action of the spelling correction to lower/upper case changes.
-    Other potential corrections are not performed.</p>
+    <p>When set, this directive limits the action of the spelling correction
+    to lower/upper case changes.  Other potential corrections are not performed,
+    except when <directive module="mod_speling">CheckBasenameMatch</directive> is also set.</p>
+</usage>
+</directivesynopsis>
 
+<directivesynopsis>
+<name>CheckBasenameMatch</name>
+<description>Also match files with differing file name extensions.</description>
+<syntax>CheckBasenameMatch on|off</syntax>
+<default>CheckBasenameMatch On</default>
+<contextlist>
+<context>server config</context>
+<context>virtual host</context>
+<context>directory</context>
+<context>.htaccess</context>
+</contextlist>
+<override>Options</override>
+
+<usage>
+    <p>When set, this directive extends the action of the spelling correction
+    to the file name extension. For example a file <code>foo.gif</code> will
+    match a request for <code>foo</code> or <code>foo.jpg</code>. This can be
+    particularly useful in conjunction with
+    <a href="../content-negotiation.html">MultiViews</a>.</p>
 </usage>
 </directivesynopsis>
 
